--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^2.6.0",
     "nuxt": "^2.2.0",
     "vuetify": "^1.3.3"
   },
