--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "OleMan <aom-95@live.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nodemon --watch server --exec \"nuxt\"",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -13,11 +13,21 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
+    "axios": "^0.18.0",
+    "bcrypt-node": "^0.1.0",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
+    "keyblade": "^0.3.2",
+    "moment": "^2.22.2",
+    "mongoose": "^5.3.14",
+    "mongoose-unique-validator": "^2.0.2",
     "nuxt": "^2.2.0",
-    "vuetify": "^1.3.3"
+    "vuetify": "^1.3.3",
+    "yenv": "^2.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "colors": "^1.3.2",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
@@ -26,6 +36,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.7",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
   }
