--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "axios": "^0.18.0",
     "bcrypt-node": "^0.1.0",
