fix mongo server url

--- a/env.yaml
+++ b/env.yaml
@@ -26,23 +26,21 @@ development:
   EMIT_STACK_TRACE: true
   MONGO_SERVER: 'mongodb://admin:gBzBacAVidqx4Uz@ds119374.mlab.com:19374/pilochki-as'
   ADMIN_API_URL: 'http://localhost:4000/api'
-  WEBSITE_URL: 'https://eliftech.com'
+  WEBSITE_URL: ''
   LINKEDIN_CALLBACK: 'http://localhost:3000/oauth/linkedin/callback'
 
 # Running tests
 test:
-  # Test environment is based on development.
   ~compose: development
   # Disable logging for tests
   LOG_LEVEL: off
-  #mongoDB server adress
-  MONGO_SERVER: 'mongodb://admin:12345@ds129906.mlab.com:29906/elif-cms'
+  MONGO_SERVER: 'mongodb://admin:gBzBacAVidqx4Uz@ds119374.mlab.com:19374/pilochki-as'
 
 # Production environment.
 production:
   ~compose: base
   PORT: 8080
-  MONGO_SERVER: 'mongodb://cms.eliftech.com:27148/elif-cms'
-  ADMIN_API_URL: 'http://cms.eliftech.com/api'
-  WEBSITE_URL: 'https://eliftech.com'
-  LINKEDIN_CALLBACK: 'https://eliftech.com/oauth/linkedin/callback'
+  MONGO_SERVER: 'mongodb://admin:gBzBacAVidqx4Uz@ds119374.mlab.com:19374/pilochki-as'
+  ADMIN_API_URL: ''
+  WEBSITE_URL: ''
+  LINKEDIN_CALLBACK: ''
