--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.3.14",
     "mongoose-unique-validator": "^2.0.2",
+    "multer": "^1.4.1",
     "nuxt": "^2.2.0",
     "vuetify": "^1.3.3",
     "yenv": "^2.1.0"
