--- a/env.yaml
+++ b/env.yaml
@@ -25,6 +25,8 @@ development:
   # In development it can be useful to get the error stack.
   EMIT_STACK_TRACE: true
   MONGO_SERVER: 'mongodb://admin:gBzBacAVidqx4Uz@ds119374.mlab.com:19374/pilochki-as'
+  ONESIGNAL_KEY: 'YTY4YjhmZWUtZjhmMy00OTFiLTg3ZjUtYzBkZmMyOGZkNWQ0'
+  ONESIGNAL_ID: 'ed57b76b-d236-422e-b514-eff9397f5e56'
   ADMIN_API_URL: 'http://localhost:4000/api'
   WEBSITE_URL: ''
   LINKEDIN_CALLBACK: 'http://localhost:3000/oauth/linkedin/callback'
@@ -41,6 +43,8 @@ production:
   ~compose: base
   PORT: 8080
   MONGO_SERVER: 'mongodb://admin:gBzBacAVidqx4Uz@ds119374.mlab.com:19374/pilochki-as'
+  ONESIGNAL_KEY: 'MTM5MTc0YWYtNTZkYy00NTBiLWE0MmItMjBjYmZkODY4Yjcz'
+  ONESIGNAL_ID: 'fe75f5d6-43e3-4a90-b7e6-46faa5136a76'
   ADMIN_API_URL: ''
   WEBSITE_URL: ''
   LINKEDIN_CALLBACK: ''
